--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 <meta charset="utf-8">
 <title>茶百道</title>
 </head>
-<link rel="stylesheet" type="text/css" href="css/index.css">
-<script type="text/javascript" src="js/jquery.js"></script>
-<script type="text/javascript" src="js/index.js"></script>
+<link rel="stylesheet" type="text/css" href="index.css">
+<script type="text/javascript" src="jquery.js"></script>
+<script type="text/javascript" src="index.js"></script>
 <body>
     <div class="Head">
     	<div class="logo">
